--- a/src/Server/Frame/sample.fxml
+++ b/src/Server/Frame/sample.fxml
@@ -51,7 +51,7 @@
     <AnchorPane maxHeight="600.0" maxWidth="1200.0" minHeight="600.0" minWidth="1200.0" prefHeight="600.0" prefWidth="1200.0" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="serverChatField" layoutX="464.0" layoutY="553.0" onAction="#sendMessage" prefHeight="26.0" prefWidth="206.0" />
-            <TextArea fx:id="serverChatArea" layoutX="462.0" layoutY="56.0" prefHeight="488.0" prefWidth="276.0" />
+            <TextArea fx:id="serverChatArea" layoutX="462.0" layoutY="56.0" prefHeight="488.0" prefWidth="276.0" stylesheets="@text.css" />
             <Button layoutX="682.0" layoutY="553.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="26.0" prefWidth="58.0" text="Send" />
             <ScrollPane layoutX="252.0" layoutY="55.0" prefHeight="527.0" prefWidth="200.0">
                <content>
