--- a/src/Server/Frame/sample.fxml
+++ b/src/Server/Frame/sample.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Server.Controller">
@@ -68,10 +65,10 @@
                </font>
             </Text>
             <Text layoutX="14.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Steams connection:" />
-            <Label fx:id="setSteamsText" layoutX="183.0" layoutY="111.0" text="OFFLINE" textFill="RED" />
+            <Label fx:id="setSteamsText" layoutX="183.0" layoutY="111.0" text="OFFLINE" textFill="#65801b"/>
             <Text layoutX="15.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Get Message:" />
             <Label fx:id="textLabelGetFromClient" layoutX="183.0" layoutY="142.0" text="OFFLINE" textFill="RED" />
-            <Label fx:id="connectToClientText" layoutX="182.0" layoutY="87.0" text="OFFLINE" textFill="RED" />
+            <Label fx:id="connectToClientText" layoutX="182.0" layoutY="87.0" text="OFFLINE" textFill="#2d0080"/>
             <Button layoutX="84.0" layoutY="318.0" mnemonicParsing="false" onAction="#closeConnection" prefHeight="26.0" prefWidth="64.0" text="Stop" />
             <Button fx:id="connectionStatusStart" layoutX="13.0" layoutY="380.0" mnemonicParsing="false" onAction="#connectionStatusStart" prefHeight="26.0" prefWidth="64.0" text="Start" />
             <Button fx:id="connectionStatusStop" disable="true" layoutX="84.0" layoutY="380.0" mnemonicParsing="false" onAction="#connectionStatusStop" prefHeight="26.0" prefWidth="64.0" text="Stop" />
